@@ -5,5 +5,6 @@
     7 pm
         used react context to make all user inputs global
         change updates.txt to changelog.txt and moved it to root
-
+    9 pm 
+    added geoapify api function calls to autocomplete a city search
 
